# crystal-detector

./: .gitignore  CMakeLists.txt  README.md  setup.sh
CBDsim/: CBDsim.cc  CMakeLists.txt  RootInterface.cc  gui.mac  physicID.txt  run_ele.mac  run_gamma.mac  run_muon.mac  vis.mac
CBDsim/include/: CBDsimActionInitialization.hh  CBDsimDetectorConstruction.hh  CBDsimEventAction.hh  CBDsimFiberParam.hh  CBDsimMaterials.hh  CBDsimPrimaryGeneratorAction.hh  CBDsimRunAction.hh  CBDsimSiPMHit.hh  CBDsimSiPMSD.hh  CBDsimSteppingAction.hh  CMakeCache.txt
CBDsim/src/: CBDsimActionInitialization.cc  CBDsimDetectorConstruction.cc  CBDsimEventAction.cc  CBDsimFiberParam.cc  CBDsimMaterials.cc  CBDsimPrimaryGeneratorAction.cc  CBDsimRunAction.cc  CBDsimSiPMHit.cc  CBDsimSiPMSD.cc  CBDsimSteppingAction.cc
Reco/: CMakeLists.txt  Reco.cc
analysis/: CMakeLists.txt  analysis _timeR.cc  analysis copy.cc  analysis.cc  analysis_energy.cc  analysis_thr_10percent.cc  analysis_thr_under2.cc  analysis_timeL.cc  analysis_v0.cc
automation/: HTCondor_env.sh  condor.sub  condor_exe.sh  run_carbon.mac  run_ele.mac  run_gamma.mac  run_muon.mac  run_proton.mac  setting.sh
rootIO/: CMakeLists.txt
rootIO/include/: CBDsimInterface.h  CBDsimRootInterface.h  LinkDef.h
rootIO/src/: CBDsimRootInterface.cc
